EventService refactor
reorganized methods to match CRUD
added private method do get event from repository
optimized imports
rewrote tests
made code look nice